--- a/CarShareApi/Pages/Car.html
+++ b/CarShareApi/Pages/Car.html
@@ -1,7 +1,6 @@
-﻿
-<div class="container">
+﻿<div class="container">
     <div class="well">
-        <h1>About Page</h1>
+        <h1>Cars Page</h1>
 
         <div ng-show="!LoggedOn">
 
@@ -10,8 +9,9 @@
 
         <div ng-show="LoggedOn">
 
-            <p>Your access token is</p>
-            <textarea class="form-control" rows="6">{{Token}}</textarea>
+            <p>welcome to the logged on section</p>
+            
+            {{Car}}
         </div>
     </div>
 </div>
