--- a/CarShareApi/Pages/Home.html
+++ b/CarShareApi/Pages/Home.html
@@ -1,5 +1,5 @@
 ﻿<div class="jumbotron text-center">
-    <h1>Home Page</h1>
+    <h1><i class="fa fa-car"></i> Car Share</h1>
 
-    <p>{{ message }}</p>
+    <p>It just makes sense</p>
 </div>
