started added register front end demo page

--- a/CarShareApi/Pages/Home.html
+++ b/CarShareApi/Pages/Home.html
@@ -1,5 +1,8 @@
-﻿<div class="jumbotron text-center">
-    <h1><i class="fa fa-car"></i> Car Share</h1>
+﻿
+<div class="container">
+    <div class="well text-center">
+        <h1><i class="fa fa-cloud"></i> Ewebah</h1>
 
-    <p>It just makes sense</p>
+        <p>Car Share API</p>
+    </div>
 </div>
