--- a/CarShareApi/index.html
+++ b/CarShareApi/index.html
@@ -13,6 +13,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
     <script src="./Scripts/app.js"></script>
     <script src="./Scripts/Controllers/LogonController.js"></script>
+    <script src="./Scripts/Controllers/RegisterController.js"></script>
     <script src="./Scripts/Controllers/CarsController.js"></script>
     <script src="./Scripts/Controllers/CarController.js"></script>
     <script src="./Scripts/Controllers/AboutController.js"></script>
@@ -24,7 +25,7 @@
         <nav class="navbar navbar-inverse">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/">Car Share App Example</a>
+                    <a class="navbar-brand" href="/">Ewebah</a>
                 </div>
 
                 <ul class="nav navbar-nav navbar-right" ng-show="Token">
