first connection to database on AWS

--- a/CarShareApi/Pages/Register.html
+++ b/CarShareApi/Pages/Register.html
@@ -4,16 +4,31 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h2>Register</h2>
-                <form name="form" ng-submit="Logon()" role="form">
+                <form name="form" ng-submit="Register()" role="form">
+                    <div class="form-group" ng-class="{ 'has-error': form.firstName.$dirty && form.firstName.$error.required }">
+                        <label for="username">First Name</label>
+                        <input type="text" name="firstName" id="firstName" class="form-control" ng-model="RegisterRequest.FirstName" required />
+                        <span ng-show="form.firstName.$dirty && form.firstName.$error.required" class="help-block">First Name is required</span>
+                    </div>
+                    <div class="form-group" ng-class="{ 'has-error': form.lastName.$dirty && form.lastName.$error.required }">
+                        <label for="username">Last Name</label>
+                        <input type="text" name="lastName" id="lastName" class="form-control" ng-model="RegisterRequest.LastName" required />
+                        <span ng-show="form.lastName.$dirty && form.lastName.$error.required" class="help-block">Last Name is required</span>
+                    </div>
                     <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && form.username.$error.required }">
                         <label for="username">Email</label>
-                        <input type="text" name="username" id="username" class="form-control" ng-model="LogonRequest.Email" required />
+                        <input type="text" name="username" id="username" class="form-control" ng-model="RegisterRequest.Email" required />
                         <span ng-show="form.username.$dirty && form.username.$error.required" class="help-block">Email is required</span>
                     </div>
                     <div class="form-group" ng-class="{ 'has-error': form.password.$dirty && form.password.$error.required }">
                         <label for="password">Password</label>
-                        <input type="password" name="password" id="password" class="form-control" ng-model="LogonRequest.Password" required />
+                        <input type="password" name="password" id="password" class="form-control" ng-model="RegisterRequest.Password" required />
                         <span ng-show="form.password.$dirty && form.password.$error.required" class="help-block">Password is required</span>
+                    </div>
+                    <div class="form-group" ng-class="{ 'has-error': form.confirmPassword.$dirty && form.confirmPassword.$error.required }">
+                        <label for="password">Confirm Password</label>
+                        <input type="password" name="confirmPassword" id="confirmPassword" class="form-control" ng-model="RegisterRequest.ConfirmPassword" required />
+                        <span ng-show="form.password.$dirty && form.confirmPassword.$error.required" class="help-block">Confirm Password is required</span>
                     </div>
                     <div class="form-actions">
                         <button type="submit" ng-disabled="form.$invalid || Loading" class="btn btn-primary">Register</button>
