--- a/CarShareApi/index.html
+++ b/CarShareApi/index.html
@@ -34,9 +34,11 @@
                     <li><a href="#cars"><i class="fa fa-car"></i> Cars</a></li>
                     <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
                     <li><a href="#logon"><i class="fa fa-user"></i> Logon</a></li>
+                    <li><a href="./swagger"><i class="fa fa-book"></i> Swagger</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right" ng-show="!Token">
                     <li><a href="#logon"><i class="fa fa-user"></i> Logon</a></li>
+                    <li><a href="./swagger"><i class="fa fa-book"></i> Swagger</a></li>
                 </ul>
             </div>
         </nav>
