--- a/CarShareApi/index.html
+++ b/CarShareApi/index.html
@@ -17,6 +17,7 @@
     <script src="./Scripts/Controllers/CarsController.js"></script>
     <script src="./Scripts/Controllers/CarController.js"></script>
     <script src="./Scripts/Controllers/AboutController.js"></script>
+    <script src="./Scripts/Controllers/SearchController.js"></script>
 </head>
 <body>
 
@@ -32,6 +33,7 @@
                     
                     <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
                     <li><a href="#cars"><i class="fa fa-car"></i> Cars</a></li>
+                    <li><a href="#search"><i class="fa fa-car"></i> Search</a></li>
                     <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
                     <li><a href="#logon"><i class="fa fa-user"></i> Logon</a></li>
                     <li><a href="./swagger"><i class="fa fa-book"></i> Swagger</a></li>
