--- a/CarShareApi/index.html
+++ b/CarShareApi/index.html
@@ -10,6 +10,7 @@
     <!-- SPELLS -->
     <!-- load angular and angular route via CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcAdBWdbkfkQmnqwxoPeIztYwlG2-D9O8"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
     <script src="./Scripts/app.js"></script>
     <script src="./Scripts/Controllers/LogonController.js"></script>
