--- a/CarShareApi/index.html
+++ b/CarShareApi/index.html
@@ -28,7 +28,7 @@
     <p><img src="./Content/Images/EweBah2.png" /></p>
     <h2>Ewebah API</h2>
     <p class="tagline">Book, Drive, Return</p>
-    <a href="./swagger"><i class="fa fa-book"></i>Swagger Documentation</a>
+    <a href="./swagger">Swagger Documentation</a>
 </div>
 <!-- HEADER AND NAVBAR -->
 <!--<header>
